--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,31 +1,49 @@
-.about{
-    background-color: white;
+.about {
+  background-color: var(--color-surface);
 
-    text-align: center;
+  text-align: center;
 }
 
-.about > img{
-    width: 100%;
+.about > .about-text {
+  width: 1024px;
+  margin: 0 auto;
+  padding: var(--space-xxl) var(--space-lg) 0;
 }
 
-.about > .about-text{
-    width: 1024px;
-    max-width: 100%;
-    margin: 0 auto;
-    padding: var(--space-xxl) var(--space-lg) 0; 
+.about-text > div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: var(--space-lg);
 }
 
-.about-text> div{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: var(--space-lg);
+.about-text p {
+  flex: 1 0 350px;
+
+  margin-top: var(--space-md);
+
+  text-align: left;
 }
 
-.about-text p{
-    flex: 1 0 350px;
+.timeline {
+  position: relative;
+}
 
-    margin-top: var(--space-md);
+.timeline > .triangle {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
 
-    text-align: left;
+  width: 100%;
+  height: 50%;
+  background-color: var(--color-dark);
+
+  -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 0);
+  clip-path: polygon(0 100%, 100% 100%, 100% 0);
+}
+
+.timeline > img {
+  position: relative;
+  z-index: 10;
 }
