--- a/src/components/Article/style.css
+++ b/src/components/Article/style.css
@@ -1,63 +1,64 @@
-article{
-    position: relative;
+article {
+  position: relative;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    flex-basis: 25%;
-    flex-grow: 1;
-    gap:var(--space-xs);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex-basis: 25%;
+  flex-grow: 1;
+  gap: var(--space-xs);
 
-    padding:var(--space-md);
-    padding-top: var(--space-xxl);
+  min-width: 250px;
+  padding: var(--space-md);
+  padding-top: var(--space-xxl);
 
-    background-position:center;
-    background-size: 250%;
+  background-position: center;
+  background-size: 250%;
 }
 
-article:nth-child(2){
-    background-color: black;
-    color: white;
+article:nth-child(2) {
+  background-color: var(--color-dark);
+  color: var(--color-on-dark);
 }
 
-article >.article-date{
-    color:gray;
-    font-weight: bold;
+article > .article-date {
+  color: gray;
+  font-weight: bold;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
-article > .article-date > .material-icons{
-    margin-right: var(--space-xxs);
-
-    font-size: 2.15rem;
-    vertical-align: text-bottom;
+article > .article-date > .icon {
+  margin-right: var(--space-xxs);
+  vertical-align: text-bottom;
 }
 
-article h2{
-    color: red;
+article h2 {
+  color: var(--color-brand);
 }
 
-article .article-body{
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+article .article-body {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-article.release{
-    flex-basis: 50%;
+article.release {
+  flex-basis: 50%;
 
-    padding: calc(var(--space-xl) * 2) var(--space-lg);
-    padding-bottom: var(--space-lg);
+  padding: calc(var(--space-xl) * 2) var(--space-lg);
+  padding-bottom: var(--space-lg);
 }
 
-article.release >.article-date{
-    color: inherit;
-    font-size: 2.5rem;
-    line-height: 1;
+article.release > .article-date {
+  color: inherit;
+  font-size: 2.5rem;
+  line-height: 1;
 }
 
-article.release >h2{
-    font-size:2rem;
+article.release > h2 {
+  font-size: 2rem;
 }
-
