--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,38 +1,57 @@
-header{
-    display:flex;
-    flex-direction: row;
+header {
+  display: flex;
+  flex-direction: row;
 
-    width: 100%;
-    background-color: white;
+  width: 100%;
+  background-color: var(--color-surface);
 
-    font-weight: bold;
-    text-transform: uppercase;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-header > nav{
-    display: flex;
-    flex-grow: 1;
+header > .header-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-grow: 1;
 }
 
-header > nav > ul{
-    display: flex;
-    flex-direction: row;
-    gap: var(--space-md);
+.header-nav > nav > ul {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-md);
 
-    padding: var(--space-md) var(--space-lg); 
+  padding: var(--space-md) var(--space-lg);
 }
 
-header > .logo{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-
-    background-color: red;
-    padding-right: var(--space-lg);
-    padding-left: var(--space-xl);
+@media screen and (max-width: 800px) {
+  .header-nav nav {
+    display: none;
+  }
 }
 
-header > .logo > img{
-    height: 65%;
+.header-nav > .icon {
+  margin: var(--space-sm) var(--space-md);
+}
+
+@media screen and (min-width: 801px) {
+  .header-nav > .icon {
+    display: none;
+  }
+}
+
+header > .logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+
+  width: min(350px, 5 0%);
+  padding: 0 var(--space-lg);
+  background-color: var(--color-brand);
+}
+
+header > .logo > img {
+  max-height: 65%;
+  width: 100%;
 }
