--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
-:root{
-  --background-color: #e5eaee;
+:root {
+  --color-brand: #c4132f;
+  --color-background: #e5eaee;
+  --color-surface: white;
+  --color-dark: black;
+
+  --color-on-background: black;
+  --color-on-dark: white;
 
   --space-xxs: 0.25rem;
   --space-xs: 0.5rem;
@@ -12,75 +18,94 @@
   --space-xxl: 5.25rem;
 }
 
-*, ::after,::before{
+*,
+::after,
+::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  max-width: 100%;
 }
 
 body {
   width: 1400px;
-  max-width: 100%;
   margin: 0 auto;
-  background-color: var(--background-color);
+  background-color: var(--color-background);
 
-  font-family: 'Open Sans', sans-serif;
+  color: var(--color-on-background);
+  font-family: "Open Sans", sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-li{
+li {
   list-style-type: none;
 }
 
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
 
-h1,h2,h3{
+h1,
+h2,
+h3 {
   text-transform: uppercase;
 }
 
-h1,h2{
+h1,
+h2 {
   line-height: 1;
 }
 
-h2, .display-2{
+h2,
+.display-2 {
   font-size: 1.2rem;
-  font-weight:700;
-  letter-spacing: -.05rem;
+  font-weight: 700;
+  letter-spacing: -0.05rem;
   text-transform: uppercase;
 }
 
-h3, .display-3{
+h3,
+.display-3 {
   font-size: 1.2rem;
-  letter-spacing: -.05rem;
+  letter-spacing: -0.05rem;
   font-weight: 700;
 }
 
-.display-1{
+.display-1 {
   font-size: 2.5rem;
   font-weight: 700;
   line-height: 1.5;
 }
 
+.icon {
+  width: 1.75rem;
+  height: 1.75rem;
+}
 
-hr{
+hr {
   width: 350px;
-  max-width: 100%;
   margin: var(--space-md) auto;
 }
 
-button{
+button {
   margin-top: var(--space-md);
   padding: var(--space-sm) var(--space-md);
   border: 2px solid;
   background: transparent;
 
   font-weight: bold;
-  color:inherit;
+  color: inherit;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
+.hidden {
+  display: none;
 }
