add hover effect on filter

--- a/src/components/Team/style.css
+++ b/src/components/Team/style.css
@@ -82,6 +82,12 @@
 .member-filter > * {
   opacity: 0.5;
   cursor: pointer;
+
+  transition: opacity 100ms ease;
+}
+
+.member-filter > *:hover {
+  opacity: 1;
 }
 
 .member-filter > .selected {
