--- a/src/components/Landing/style.css
+++ b/src/components/Landing/style.css
@@ -6,21 +6,41 @@
 }
 
 .landing > .landing-background {
+  --shape-offset: 10%;
+
   position: absolute;
   top: 0;
 
   width: 100%;
-  height: 111%;
-  object-fit: cover;
-  object-position: center -3rem;
+  height: calc(101% + var(--shape-offset));
 
-  -webkit-clip-path: polygon(0 0, 0 90%, 50% 100%, 100% 90%, 100% 0);
-  clip-path: polygon(0 0, 0 90%, 50% 100%, 100% 90%, 100% 0);
+  overflow: hidden;
+  -webkit-clip-path: polygon(
+    0 0,
+    0 calc(100% - var(--shape-offset)),
+    50% 100%,
+    100% calc(100% - var(--shape-offset)),
+    100% 0
+  );
+  clip-path: polygon(
+    0 0,
+    0 calc(100% - var(--shape-offset)),
+    50% 100%,
+    100% calc(100% - var(--shape-offset)),
+    100% 0
+  );
 }
 
-.landing > .compass {
+.landing-background > .background {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center 15%;
+}
+
+.landing-background > .compass {
   position: absolute;
-  top: calc(50% + var(--space-lg));
+  top: 60%;
   right: 2.5%;
 
   width: 475px;
@@ -41,7 +61,7 @@
 }
 
 .landing h1 {
-  font-size: min(4rem, 10vw);
+  font-size: min(4rem, 12vw);
   letter-spacing: -0.1rem;
   color: var(--color-brand);
 
@@ -50,6 +70,14 @@
 }
 
 .landing h2 {
-  font-size: 1.5rem;
+  font-size: min(1.5rem, 6vw);
   line-height: 1.35;
+}
+
+@media screen and (max-width: 850px) {
+  .landing > .text {
+    width: 100%;
+
+    box-sizing: border-box;
+  }
 }
