--- a/src/components/Team/style.css
+++ b/src/components/Team/style.css
@@ -10,8 +10,10 @@
 }
 
 .member-list {
+  --member-width: 235px;
+
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(var(--member-width), 1fr));
 
   width: 100%;
   margin: var(--space-md) 0;
@@ -19,53 +21,10 @@
   overflow: hidden;
 }
 
-.member {
-  position: relative;
-  height: 300px;
-  cursor: pointer;
-}
-
-.member:hover .member-info {
-  visibility: visible;
-  left: 100%;
-}
-
-.member-info {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: -1;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-
-  height: 100%;
-  width: 100%;
-  padding: var(--space-md);
-  background-color: var(--color-background);
-
-  color: var(--color-on-background);
-  font-weight: 600;
-  text-align: left;
-  pointer-events: none;
-  visibility: hidden;
-  transition: left 350ms ease;
-}
-
-.member:hover img {
-  filter: saturate(1) brightness(1);
-}
-
-.member img {
-  width: 100%;
-  height: 100%;
-  object-position: center;
-  object-fit: cover;
-
-  filter: saturate(0) brightness(0.75);
-  transition: filter 200ms ease;
+@media screen and (max-width: 600px) {
+  .member-list {
+    --member-width: 1fr;
+  }
 }
 
 .member-filter {
