--- a/src/components/Landing/style.css
+++ b/src/components/Landing/style.css
@@ -1,4 +1,6 @@
 .landing {
+  --shape-offset: 10%;
+
   position: relative;
   z-index: 1;
 
@@ -6,8 +8,6 @@
 }
 
 .landing > .landing-background {
-  --shape-offset: 10%;
-
   position: absolute;
   top: 0;
 
@@ -29,13 +29,10 @@
     100% calc(100% - var(--shape-offset)),
     100% 0
   );
-}
 
-.landing-background > .background {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center 15%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .landing-background > .compass {
@@ -70,14 +67,13 @@
 }
 
 .landing h2 {
-  font-size: min(1.5rem, 6vw);
+  font-size: min(1.5rem, 5.5vw);
   line-height: 1.35;
 }
 
 @media screen and (max-width: 850px) {
   .landing > .text {
-    width: 100%;
-
+    margin: 0 auto;
     box-sizing: border-box;
   }
 }
