--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -10,6 +10,10 @@
   padding: var(--space-xxl) var(--space-md) 0;
 }
 
+.about-text > h3{
+  margin-top: var(--space-sm);
+}
+
 .about-text > div {
   display: flex;
   flex-direction: row;
