--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -3,21 +3,29 @@ footer {
   flex-direction: row;
   flex-wrap: wrap;
   gap: var(--space-xl);
-  row-gap: var(--space-md);
+  row-gap: var(--space-lg);
 
   width: 100%;
   padding: var(--space-xl) var(--space-lg);
+  background-color: var(--color-background);
 
   font-weight: 600;
   white-space: nowrap;
 }
 
-footer > * {
+footer > div {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
   flex-grow: 1;
   flex-shrink: 1;
+}
+
+footer > .copyright{
+opacity: 50%;
+gap: var(--space-xs);
+flex-wrap:wrap;
 }
 
 footer .logos {
@@ -28,9 +36,44 @@ footer .logos {
   gap: var(--space-md);
 
   font-size: 2rem;
+  cursor: pointer;
 }
 
 footer .links {
-  justify-content: flex-end;
   gap: var(--space-md);
+}
+
+footer .links >.column {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: var(--space-md);
+  flex-wrap: wrap;
+}
+
+footer .logos > :hover{
+  transition: color 100ms ease;
+  color:var(--color-brand)
+}
+
+footer  a{
+  position: relative;
+}
+
+footer a::after{
+  content: '';
+
+  position: absolute;
+  top:100%;
+  left:0;
+  right: 100%;
+
+  height: 2px;
+  background-color: var(--color-on-background);
+
+  transition: right .3s ease;
+}
+
+footer a:hover::after{
+  right: 0;
 }
