--- a/src/components/Member/style.css
+++ b/src/components/Member/style.css
@@ -1,6 +1,5 @@
 .member {
   position: relative;
-  height: 300px;
   cursor: pointer;
 
   display: flex;
@@ -20,8 +19,8 @@
   flex-direction: column;
   justify-content: flex-end;
 
-  height: 100%;
   width: 100%;
+  height: 100%;
   padding: var(--space-md);
   background-color: var(--color-background);
 
@@ -33,12 +32,22 @@
   transition: left 350ms ease;
 }
 
-@media screen and (max-width: 600px) {
+.member img {
+  width: 100%;
+  height: 300px;
+  object-position: center;
+  object-fit: cover;
+
+  transition: filter 200ms ease;
+}
+
+
+@media screen and (max-width:700px) {
   .member:nth-child(even) {
     flex-direction: row-reverse;
   }
   .member > * {
-    flex-basis: 50%;
+    flex: 1 1 50%;
   }
   .member-info {
     position: relative;
@@ -46,7 +55,28 @@
   }
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (max-width:500px) {
+  .member{
+    flex-direction: column!important;
+  }
+  .member > * {
+    flex:unset;
+  }
+  .member-info {
+    position: absolute;
+    bottom:0;
+    z-index: 1;
+
+    background: linear-gradient(transparent, rgba(0, 0, 0, .35));    
+    color: var(--color-on-dark);
+  }
+
+  .member > img{
+    height: 250px;
+  }
+}
+
+@media screen and (min-width: 701px) {
   .member:hover .member-info {
     left: 100%;
     visibility: visible;
@@ -61,11 +91,4 @@
   filter: saturate(1) brightness(1);
 }
 
-.member img {
-  width: 100%;
-  height: 100%;
-  object-position: center;
-  object-fit: cover;
 
-  transition: filter 200ms ease;
-}
